# theoriq-agent-sdk

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  biscuit.py  main.py  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test_code_block_example.py
.github/actions/setup/: action.yaml
.github/workflows/: python.yaml
doc/: flask-integration.ipynb
examples/council_agent/: .env.example  config.yaml  main.py
examples/hello_world_agent/: .env.example  README.md  main.py  requirements.txt
examples/hello_world_agent/scripts/: install.sh  run.sh
examples/publisher/: main.py  requirements.txt
examples/publisher/scripts/: install.sh
examples/simple_publisher/: .env.example  README.md  main.py
examples/simple_subscriber/: .env.example  README.md  main.py  requirements.txt
examples/subscriber/: README.md  main.py  requirements.txt
examples/subscriber/scripts/: install.sh
publisher/: README.md  main.py  requirements.txt
scripts/: add_agent.py  generate_private_key.py  get_access_biscuit.py  verify_biscuit.py
tests/: __init__.py  fixtures.py  test_agent_address.py  test_biscuit.py  test_challenge.py  test_flask.py  test_read_biscuit.py  test_schemas.py  test_types.py  utils.py
tests/data/: agent.yaml  agent_a.yaml  agent_b.yaml  child_agent_a.yaml  child_agent_b.yaml  configurable_agent.yaml  parent_agent.yaml
tests/data/basic/: basic_agent_a.yaml  basic_agent_b.yaml
tests/data/child/: child_agent_a.yaml  child_agent_b.yaml
tests/data/configurable/: configurable_agent.yaml
tests/data/owner/: owner_agent.yaml
tests/data/parent/: parent_agent.yaml
tests/integration/: agent_registry.py  agent_runner.py  conftest.py  test_as_agent.py  test_as_user.py  test_configurable.py  test_get_agents.py  test_get_public_key.py  test_get_request.py  test_protocol_client.py  test_protocol_client_v1alpha1.py  test_protocol_client_v1alpha2.py  test_pub_sub.py  test_web3.py  utils.py
tests/integration/dev_utils/: protocol_utils.py  run_agents_utils.py
tests/unit/: fixtures.py  test_actions.py  test_agent_address.py  test_agent_data.py  test_biscuit.py  test_challenge.py  test_dialog.py  test_dialog_to_str.py  test_execute_request.py  test_execute_schema.py  test_flask.py  test_flask_v1alpha1.py  test_flask_v1alpha2.py  test_payload_hash.py  test_schemas.py  test_source_type.py  test_subscriber.py  test_types.py  test_utils.py  test_utils_env.py  utils.py
theoriq/: __init__.py  agent.py  biscuit.py  error.py  execute.py  facts.py  flask_server.py  metric.py  schemas.py  types.py  utils.py
theoriq/api/: __init__.py  common.py  protocol_client_base.py
theoriq/api/v1alpha1/: __init__.py  execute.py
theoriq/api/v1alpha2/: __init__.py  agent.py  base_context.py  configure.py  context_base.py  execute.py  manage.py  message.py  metrics.py  publish.py  request_context.py  request_context_base.py  subscribe.py
theoriq/api_v1alpha1/protocol/: protocol_client.py
theoriq/biscuit/: __init__.py  agent_address.py  authentication_biscuit.py  biscuit.py  error.py  facts.py  payload_hash.py  request_biscuit.py  response_biscuit.py  theoriq_biscuit.py  utils.py
theoriq/dialog/: __init__.py  actions.py  bloc.py  block.py  code.py  code_items.py  command.py  command_items.py  commands.py  custom.py  custom_items.py  data.py  data_items.py  dialog.py  error_items.py  error_message.py  image.py  item_block.py  items.py  metrics.py  metrics_items.py  router.py  router_items.py  runtime_error.py  suggestions_items.py  text.py  text_items.py  tool_items.py  web3.py  web3_items.py
theoriq/dialogv2/: dialog.py  items.py
theoriq/extra/: __init__.py  flask.py  globals.py  log_utils.py
theoriq/protocol/: protocol_client.py
theoriq/schemas/: __init__.py  api.py  challenge.py  code.py  custom.py  data.py  image.py  metrics.py  request.py  route.py  router.py  runtime_error.py  schemas.py  text.py
theoriq/types/: __init__.py  agent_address.py  agent_data.py  biscuit.py  currency.py  data_object.py  metric.py  source_type.py
theoriq/utils/: __init__.py  cache.py  env.py  utils.py
theoriq_extra/: flask.py  globals.py
(+56 files in other folders)
