[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "theoriq"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = []

dependencies = [
    "biscuit-python @ git+https://github.com/chain-ml/biscuit-python.git@2cd8292",
    "safe-pysha3 (>=1.0,<2.0)",
    "pydantic (>=2.8.0,<3.0)",
    "cryptography (>=43.0,<44.0)",
    "httpx (~=0.27)"
]

[tool.poetry.group.pyyaml.dependencies]
pyyaml = ">=6.0,<7.0"
types-pyyaml = "6.0.12.20240808"

[tool.poetry.group.jsonschema.dependencies]
jsonschema = ">=4.23,<5.0"
types-jsonschema = "4.23.0.20240813"

[tool.poetry.group.flask]
optional = true

[tool.poetry.group.flask.dependencies]
flask = ">=3.1.0,<4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "7.4"
lint = "^1.2.1"
black = "24.10.0"
mypy = "1.13.0"
ruff = "0.9.8"
pylint = "3.3.1"
isort = "5.13.2"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s %(levelname)s %(threadName)s %(name)s:%(funcName)s:%(lineno)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S%z"

[tool.black]
line-length = 120

[tool.mypy]
exclude = "(?x)(venv|docs|tmp|examples)"
mypy_path = "./stubs"
explicit_package_bases = "true"

[tool.ruff]
exclude = ["__init__.py", "docs", "tmp"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
py_version=39
src_paths = ["theoriq"]
skip = ["__init__.py"]
skip_glob = ["**/.venv/*", "**/venv/*", "**/docs/*", "**/stubs/*"]
